# sl1

./: .gitignore  Cargo.toml  README.md  TODO.md  aliases.nix  build.rs  flake.nix  protocol.txt
desktop/: Cargo.toml  package.nix
desktop-app/: Cargo.toml  TODO.md  flake.nix
desktop-app/src/: config.rs  device.rs  error.rs  main.rs
desktop/assets/: ATTRIBUTION.md  sl1-desktop.desktop
desktop/src/: connection.rs  detector.rs  device.rs  error.rs  main.rs
firmware/: Cargo.toml  TODO.md  espflash.toml  flake.nix  protocol.txt  setup-rust.sh
firmware/.cargo/: config.toml
firmware/src/: constants.rs  error.rs  main.rs  server.rs  settings.rs  types.rs  wifi.rs
firmware/src/presets/: dynamic_color.rs  fire.rs  mod.rs  noise.rs  running_rainbow.rs  static_color.rs  utils.rs
sl1-desktop/: Cargo.toml  flake.nix  package.nix
sl1-desktop/src/: config.rs  connection.rs  detector.rs  device.rs  error.rs  main.rs
sl1-firmware/: Cargo.toml  aliases.nix  build.rs  flake.nix  partition-table.csv  protocol.txt
sl1-firmware/.cargo/: config.toml
sl1-firmware/src/: constants.rs  error.rs  main.rs  server.rs  settings.rs  wifi.rs
sl1-firmware/src/presets/: dynamic_color.rs  fire.rs  mod.rs  noise.rs  running_rainbow.rs  static_color.rs
sl1-iced-gui/: Cargo.toml  flake.nix
sl1-iced-gui/src/: device.rs  main.rs  types.rs  widget.rs
sl1-protocol/: Cargo.toml
sl1-protocol/src/: lib.rs
src/: constants.rs  error.rs  main.rs  server.rs  settings.rs  types.rs
src/presets/: dynamic_color.rs  fire.rs  mod.rs  running_rainbow.rs  static_color.rs  utils.rs
