[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
futures = "0.3.31"
iced = { version = "0.13.1", features = ["tokio"] }
ipnetwork = "0.21.1"
log = { version = "0.4.27", features = ["release_max_level_info", "max_level_trace"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = {version = "1.44.2", features = ["full"]}
toml = "0.8.20"
tracing-subscriber = "0.3.19"
