[package]
name = "sl1-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
futures = { version = "0.3.31", default-features = false}
iced = { version = "0.13.1", features = ["smol"] }
ipnetwork = "0.21.1"
log = { version = "0.4.27", features = ["release_max_level_warn", "max_level_trace"] }
serde = "1.0.219"
serde_json = "1.0.140"
smol = "2.0.2"
smol-timeout = "0.6.1"
toml = "0.8.20"
tracing-subscriber = "0.3.19"
