[package]
edition = "2021"
name    = "sl1"
version = "0.1.0"
rust-version = "1.84.0"

[[bin]]
name = "sl1"
path = "./src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "esp-alloc",
  "esp32c3",
  "log",
  "utils",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
log = { version = "0.4.21", features = ["release_max_level_off"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time     = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.6.0", features = ["esp32c3"] }
static_cell      = { version = "2.1.0", features = ["nightly"] }
ws2812-spi = "0.5.0"
esp-storage = { version = "0.4.0", features = ["esp32c3"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
# esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community", rev = "ad75112", features = ["esp32c3"] }
embassy-sync = "0.6.2"
smart-leds-trait = "0.3.1"
serde_json = { version = "1.0.140",  default-features = false, features = ["alloc", "raw_value"] }
embedded-storage = "0.3.1"
embedded-hal = "1.0.0"

[build-dependencies]
dotenv-build = "0.1.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
