[package]
edition = "2024"
name    = "sl1-firmware"
version = "0.1.0"
rust-version = "1.86.0"

[[bin]]
name = "sl1-firmware"
path = "./src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
embassy-net = { version = "0.6.0", features = ["dhcpv4","udp"] }
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c3"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "esp-alloc",
  "esp32c3",
  "log",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
log = { version = "0.4.21", features = ["release_max_level_off"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time     = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.6.0", features = ["esp32c3"] }
static_cell      = { version = "2.1.0" }
ws2812-spi = "0.5.0"
esp-storage = { version = "0.5.0", features = ["esp32c3"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
embassy-sync = "0.6.2"
smart-leds-trait = "0.3.1"
serde_json = { version = "1.0.140",  default-features = false, features = ["alloc", "raw_value"] }
embedded-storage = "0.3.1"

[build-dependencies]
dotenv-build = "0.1.1"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = "fat"
opt-level        = "s"
overflow-checks  = false
