[package]
edition = "2024"
name    = "sl1-firmware"
version = "0.1.0"
rust-version = "1.85.0"

[features]
default = ["esp32"]
esp32 = [
  "esp-hal/esp32",
  "esp-storage/esp32",
  "esp-hal-embassy/esp32",
  "esp-println/esp32",
  "esp-backtrace/esp32",
  "esp-wifi/esp32",
]
esp32c3 = [
  "esp-hal/esp32c3",
  "esp-storage/esp32c3",
  "esp-hal-embassy/esp32c3",
  "esp-println/esp32c3",
  "esp-backtrace/esp32c3",
  "esp-wifi/esp32c3",
]

[[bin]]
name = "sl1-firmware"
path = "./src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
# Dependencies that need board model to be specified
esp-hal = "0.23.1"
esp-storage = "0.5.0"
esp-hal-embassy  = "0.6.0"
esp-println = { version = "0.13.0", features = ["log"] }
esp-backtrace = { version = "0.15.0", features = [
  "exception-handler",
  "panic-handler",
  "println",
  "colors",
] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "esp-alloc",
  "log",
  "wifi",
] }

# Dependencies that do not depend on board model
esp-alloc = "0.6.0"
ws2812-spi = "0.5.0"
static_cell = "2.1.0"
embassy-sync = "0.6.2"
embedded-storage = "0.3.1"
smart-leds-trait = "0.3.1"
embassy-net = { version = "0.6.0", features = ["dhcpv4","udp"] }
log = { version = "0.4.21", features = ["release_max_level_off"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
serde_json = { version = "1.0.140",  default-features = false, features = ["alloc", "raw_value"] }

[build-dependencies]
dotenv-build = "0.1.1"

[profile.dev.package.esp-wifi]
opt-level = 3
[profile.release.package.esp-wifi]
opt-level = 3

[profile.dev.package.esp-storage]
opt-level = 3
[profile.release.package.esp-storage]
opt-level = 3

[profile.dev]
opt-level = "s"

[profile.release]
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
opt-level = "s"
strip = true
lto = "fat"
debug = 0
