[package]
name = "sl1-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
futures = { version = "0.3.31", default-features = false}
iced = { version = "0.13.1", features = ["tokio"] }
ipnetwork = "0.21.1"
log = { version = "0.4.27", features = ["release_max_level_warn", "max_level_debug"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["net", "sync"] }
toml = "0.8.20"
tracing-subscriber = "0.3.19"
